Fix mobile header overlap

--- a/lekstugan-client/src/app/app.component.scss
+++ b/lekstugan-client/src/app/app.component.scss
@@ -58,6 +58,7 @@ header {
   align-items: center;
   justify-content: center;
   font-size: 60px;
+  margin: 0;
 }
 
 
@@ -69,7 +70,7 @@ header {
   justify-content: space-between;
   font-size: 45px;
   z-index: 100;
-
+  margin-bottom: 80px;
   & > h2 {
     margin-left: 20px;
   }
